--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,11 @@
 
 
 :root {
-    --primary-color: rgb(125, 17, 187);
+    --primary-color: rgb(82, 43, 112);
     --tertiary-color: #007bff;
     --secondary-color: #6c757d;
     --surface: #242824;
+    --cold-surface: #5c539d;
     --font-family: Arial, sans-serif;
     --font-size: 16px;
     --border-radius: 5px;
@@ -101,8 +102,8 @@ nav ul li a {
     background-color: #333;
 }
 
-#mobile-nav ul li:first-child:hover {
-    background-color: unset;
+#mobile-nav ul li:hover {
+    background-color: #5c539d;
 }
 
 nav ul li:active {
@@ -164,10 +165,7 @@ section {
     min-height: 70vh;
     scroll-snap-align: start;
     width: 100%;
-    margin-top: 50px;
 }
-
-
 
 #hero {
     display: flex;
@@ -500,6 +498,87 @@ section {
     }
 }
 
+.pricing {
+    min-height: 100vh;
+    width: 100%;
+    background: var(--primary-color);
+}
+
+.pricing h2 {
+    color: #fff;
+    font-size: 32px;
+    padding: 50px 0;
+    text-align: center;
+}
+
+.price-row{
+    width: 90%;
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 25px;
+}
+
+.price-col{
+    background: #1f283b;
+    padding: 10% 15%;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+}
+
+.price-col p {
+    font-size: 22px;
+    color: #fff;
+}
+
+.price-col h3{
+    color: #fff;
+    font-size: 44px;
+    margin: 20px 0 40px;
+    font-weight: 500;
+}
+
+.price-col h3 span {
+    font-size: 16px;
+}
+
+.price-col ul {
+    text-align: left;
+    margin: 20px 0;
+    color: #ddd;
+    list-style: none;
+}
+
+.price-col ul li{
+    margin: 15px 0;
+}
+
+.price-col ul li::before{
+    content: '\2022';
+    color: #e33058;
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.price-col button {
+    width: 100%;
+    padding: 14px 0;
+    background: transparent;
+    font-size: 15px;
+    border: 1px solid #e33058;
+    border-radius: 6px;
+    margin-top: 30px;
+    cursor: pointer;
+    color: #fff;
+    transition: background 0.5s;
+}
+
+.price-col button:hover{
+    background: #e33058;
+}
+
 #team {
     display: flex;
     flex-direction: column;
@@ -561,7 +640,8 @@ section {
 }
 
 .about {
-    padding: 60px 20px;
+    padding: 60px 0;
+    margin: 0;
     background-color: #f4f4f4;
 }
 
@@ -594,7 +674,7 @@ section {
     line-height: 1.6;
     color: #666;
 }
-
+/*
 .about-image {
     flex: 1 1 400px;
     width: 100%;
@@ -614,8 +694,9 @@ section {
     height: auto;
     border-radius: 10px;
     max-width: 500px;
-    src: url('assets/company.jpg'); /* Optional: Limit the image size */
+    src: url('assets/company.jpg'); /* Optional: Limit the image size 
 }
+*/
 
 .contact {
     padding: 60px 20px;
@@ -885,6 +966,9 @@ button[type="submit"]:hover {
 }
 
 @media (max-width: 780px) {
+    .pricing {
+        padding-bottom: 50px;
+    }
     .footer-container {
         flex-direction: column;
         align-items: flex-start;
